Added and updated tests